# cargo-unused-allow

./: Cargo.toml  LICENSE  README.md
examples/: cfg_attr_allows.rs  cfg_attr_allows.rs.fixed  cfg_attr_allows.rs.output  crate_level_allow.rs  crate_level_allow.rs.fixed  crate_level_allow.rs.output  macro_allows.rs  macro_allows.rs.fixed  macro_allows.rs.output  mixed_allows.rs  mixed_allows.rs.fixed  mixed_allows.rs.output  unnecessary_allows.rs  unnecessary_allows.rs.fixed  unnecessary_allows.rs.output
src/: main.rs
